cluster-maintenance/clusters/cit-cps-gpu/user/eligsir/eligsir-webxr-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eligsir-webxr-test
  labels:
    app.kubernetes.io/name: eligsir-webxr-test
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: eligsir-webxr-test
    meta.helm.sh/release-namespace: eligsir-webxr-test
