cluster-maintenance/clusters/cit-cps-gpu/user/eligsir/eligsir-webxr-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eligsir-webxr-test
spec:
  selector:
    app.kubernetes.io/name: eligsir-webxr-test
  ports:
    - name: http
      port: 80
      targetPort: http
